force-app/main/default/objects/Case/fields/RTB_Limit__c.field-meta.xml
<CustomField>
    <fullName>RTB_Limit__c</fullName>
    <label>RTB Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>