force-app/main/default/objects/Case/fields/RTB_Rights2__c.field-meta.xml
<CustomField>
    <fullName>RTB_Rights2__c</fullName>
    <label>RTB Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>