force-app/main/default/objects/Case/fields/Screenshot_of_Error__c.field-meta.xml
<CustomField>
    <fullName>Screenshot_of_Error__c</fullName>
    <inlineHelpText>Cut and paste any error message you receive here.</inlineHelpText>
    <label>Error Message (if any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>