force-app/main/default/objects/Case/fields/Send_Clarifying_Question__c.field-meta.xml
<CustomField>
    <fullName>Send_Clarifying_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Clarifying Question</label>
    <type>Checkbox</type>
</CustomField>