force-app/main/default/objects/Case/fields/Send_Resolution_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Resolution_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked and Resolution populated, a system WFR will send an email to the person who filed the case.</inlineHelpText>
    <label>Send Resolution Email</label>
    <type>Checkbox</type>
</CustomField>