force-app/main/default/objects/Case/fields/Service_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Name__c</fullName>
    <inlineHelpText>Type of agreement + Local/Global + Client name</inlineHelpText>
    <label>Service Agreement Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>