force-app/main/default/objects/Case/fields/Service_Agreement_name_DMP__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_name_DMP__c</fullName>
    <inlineHelpText>The official name of the company in the service agreement.</inlineHelpText>
    <label>Service Agreement Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>