force-app/main/default/objects/Case/fields/Serving_Continent__c.field-meta.xml
<CustomField>
    <fullName>Serving_Continent__c</fullName>
    <label>Serving Continent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Europe</fullName>
                <default>true</default>
                <label>Europe</label>
            </value>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>