force-app/main/default/objects/Case/fields/SFDC_Page_URL_for_Issue__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Page_URL_for_Issue__c</fullName>
    <inlineHelpText>Please provide a copy of the URL that indicates the issue so we can investigate.</inlineHelpText>
    <label>SFDC Page URL for Issue</label>
    <type>Url</type>
</CustomField>