force-app/main/default/objects/Case/fields/Specific_Name_of_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Specific_Name_of_Publisher__c</fullName>
    <description>Name of the publisher in the Sell-side platform</description>
    <inlineHelpText>Specify the name of the publisher which will be seen by the buyers on the platform</inlineHelpText>
    <label>Specific Name of Publisher</label>
    <length>40</length>
    <type>Text</type>
</CustomField>