force-app/main/default/objects/Case/fields/Status_of_Platform_Account__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Platform_Account__c</fullName>
    <label>Status of Platform Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review/Awaiting Admin</fullName>
            </value>
            <value>
                <fullName>Closed Resolved</fullName>
            </value>
            <value>
                <fullName>Closed Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>