force-app/main/default/objects/Case/fields/Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Email__c</fullName>
    <formula>Primary_User_Stakeholder__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitter Email</label>
    <type>Text</type>
</CustomField>