force-app/main/default/objects/Case/fields/Submitter_Email_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Email_Stamp__c</fullName>
    <label>Submitter Email (Stamp)</label>
    <type>Email</type>
</CustomField>