force-app/main/default/objects/Case/fields/Submitter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Phone__c</fullName>
    <formula>Primary_User_Stakeholder__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitter Phone</label>
    <type>Text</type>
</CustomField>