force-app/main/default/objects/Case/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <label>Time Spent (h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>