force-app/main/default/objects/Case/fields/Total_Price_For_Creative_Production__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_For_Creative_Production__c</fullName>
    <formula>Contract__r.Price_for_creative_production__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price For Creative Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>