force-app/main/default/objects/Case/fields/Trading_Desk_Fee1__c.field-meta.xml
<CustomField>
    <fullName>Trading_Desk_Fee1__c</fullName>
    <description>If yes, has to be added in the contract</description>
    <inlineHelpText>if yes, has to be added in the contract</inlineHelpText>
    <label>Trading Desk Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>