force-app/main/default/objects/Case/fields/Trafficking__c.field-meta.xml
<CustomField>
    <fullName>Trafficking__c</fullName>
    <label>Trafficking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adform</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>