force-app/main/default/objects/Case/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Type_DMP__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st party</fullName>
            </value>
            <value>
                <fullName>2nd party</fullName>
            </value>
            <value>
                <fullName>3rd party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>