force-app/main/default/objects/Case/fields/VAT_number__c.field-meta.xml
<CustomField>
    <fullName>VAT_number__c</fullName>
    <formula>Account.VAT_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT number</label>
    <type>Text</type>
</CustomField>