force-app/main/default/objects/Case/recordTypes/Creative_Production_Signed_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Creative_Production_Signed_Agreement</fullName>
    <active>true</active>
    <businessProcess>Creative Production Order - Signed BMSA%2FPMSA</businessProcess>
    <description>Creative Production Order with signed agreement</description>
    <label>Creative Production - Signed Agreement</label>
</RecordType>