force-app/main/default/objects/Case/recordTypes/DMP_ID.recordType-meta.xml
<RecordType>
    <fullName>DMP_ID</fullName>
    <active>true</active>
    <businessProcess>Platform Account Process</businessProcess>
    <description>In order to create DMP platform account, you need to open Case for DMP team</description>
    <label>DMP ID</label>
</RecordType>