force-app/main/default/objects/Case/recordTypes/Engagement_Request.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Request</fullName>
    <active>false</active>
    <businessProcess>Engagement Process</businessProcess>
    <label>Engagement Request</label>
</RecordType>