force-app/main/default/objects/Case/recordTypes/Order_Contract.recordType-meta.xml
<RecordType>
    <fullName>Order_Contract</fullName>
    <active>true</active>
    <businessProcess>Creative Production Order</businessProcess>
    <description>Creative Production Order request</description>
    <label>Creative Production Order</label>
</RecordType>