force-app/main/default/objects/Case/recordTypes/Platform_Account_Creation.recordType-meta.xml
<RecordType>
    <fullName>Platform_Account_Creation</fullName>
    <active>true</active>
    <businessProcess>Platform Account Process</businessProcess>
    <description>In order to create Platform Account, you need to open Case for Deal Desk</description>
    <label>TPAS/DSP ID</label>
</RecordType>