force-app/main/default/objects/Case/recordTypes/Salesforce_Enhancement_Project.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Enhancement_Project</fullName>
    <active>false</active>
    <businessProcess>Enhancement Process</businessProcess>
    <description>Admins only - for tracking exec-approved enhancements/SFDC project fulfillment</description>
    <label>Salesforce Enhancement/Project</label>
</RecordType>