force-app/main/default/objects/Case/recordTypes/Salesforce_Support.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Support</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <description>Choose this option for help on existing Salesforce pages, processes, and Reports.</description>
    <label>Salesforce Support</label>
</RecordType>