force-app/main/default/objects/Case/recordTypes/Sell_Side_ID.recordType-meta.xml
<RecordType>
    <fullName>Sell_Side_ID</fullName>
    <active>true</active>
    <businessProcess>Platform Account Process</businessProcess>
    <description>In order to create Sell-Side platform account, you need to open Case for Publishers team</description>
    <label>Sell-Side ID</label>
</RecordType>