force-app/main/default/objects/Case/validationRules/If_Prevents_Work_Need_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Prevents_Work_Need_Details</fullName>
    <active>true</active>
    <description>If they select prevents work, they need to add more detail fields</description>
    <errorConditionFormula>AND(
ISPICKVAL( Prevented_from_working__c ,&quot;Yes&quot;),
ISBLANK(SFDC_Page_URL_for_Issue__c)
)</errorConditionFormula>
    <errorDisplayField>SFDC_Page_URL_for_Issue__c</errorDisplayField>
    <errorMessage>If you are prevented from working, you will need to add a URL of the Error.</errorMessage>
</ValidationRule>