force-app/main/default/objects/Case/validationRules/Legal_Document_Signed.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Document_Signed</fullName>
    <active>true</active>
    <description>Validation rule for signed legal document</description>
    <errorConditionFormula>AND(I_confirm_that_Legal_document_is_signed__c = FALSE,
RecordTypeId = &#39;0120J000000cnLP&#39;
)</errorConditionFormula>
    <errorDisplayField>I_confirm_that_Legal_document_is_signed__c</errorDisplayField>
    <errorMessage>Please confirm that legal document has been signed with Adform if not please proceed with contract creation</errorMessage>
</ValidationRule>