force-app/main/default/objects/Case/validationRules/Requires_a_change_of_user_from_Queue.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_a_change_of_user_from_Queue</fullName>
    <active>true</active>
    <description>If Status = Closed, must be a non-queue user.</description>
    <errorConditionFormula>AND(
ISCHANGED( Status ),
ISPICKVAL(Status,&quot;Closed Resolved&quot;),
Owner:Queue.QueueName = &quot;Adform Issues Queue&quot;
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You must accept ownership of the Case from the Queue in order to Close it out.</errorMessage>
</ValidationRule>