force-app/main/default/objects/Case/validationRules/RTB_limit_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>RTB_limit_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(RTB__c, &#39;YES&#39;), ISBLANK(RTB_Limit__c))</errorConditionFormula>
    <errorDisplayField>RTB_Limit__c</errorDisplayField>
    <errorMessage>RTB Limit  is required when RTB limit equal to &#39;YES&#39;</errorMessage>
</ValidationRule>