force-app/main/default/objects/Case/validationRules/Status_Signed_and_start_production_error.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Signed_and_start_production_error</fullName>
    <active>true</active>
    <description>Validation rule which does not allow to select particular value for standard user.</description>
    <errorConditionFormula>AND(ISPICKVAL( Status , &#39;Production done and ready to bill&#39;), 
$Profile.Name = &#39;Adform Standard User&#39;)</errorConditionFormula>
    <errorMessage>You can not proceed with the request after Production is done, the responsible team will do changes in the system.</errorMessage>
</ValidationRule>