force-app/main/default/objects/Case/validationRules/ValidateCommentsForIO.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateCommentsForIO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &#39;Order_Contract&#39;,  Not_Served_Through_Adform__c ,  ISBLANK(Comments__c))</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Comments required when Not Served Through Adform checked</errorMessage>
</ValidationRule>